# lastfm-music-recommender

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
outputs/local/: model_results.csv
scripts/: evaluate_als.py  evaluate_content_based.py  evaluate_hybrid.py  evaluate_item_knn.py  evaluate_popularity.py  plot_model_results.py
src/music_recommender/: base.py  config.py  data.py  evaluation.py  test_data_loading.py
src/music_recommender/models/: als.py  content_based.py  hybrid.py  item_knn.py  popularity.py
tests/: test_als.py  test_content_based.py  test_evaluation.py  test_hybrid.py  test_item_knn.py  test_popularity.py
